file name updated

--- a/orders.html
+++ b/orders.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./css/common.css" rel="stylesheet" type="text/css" />
-    <title>Order</title>
+    <title>Kafene | Orders</title>
   </head>
   <body>
     <header>
@@ -99,7 +99,7 @@
       </section>
     </main>
     <script src="./js/orders.js"></script>
-    <script src="./js/checklogin.js"></script>
+    <script src="./js/checkLogin.js"></script>
     <script src="./js/logout.js"></script>
   </body>
 </html>
