--- a/users.html
+++ b/users.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./css/common.css" rel="stylesheet" type="text/css" />
     <link href="./css/users.css" rel="stylesheet" type="text/css" />
-    <title>Kafene</title>
+    <title>Kafene | Users</title>
   </head>
   <body>
     <header>
@@ -58,7 +58,7 @@
       </div>
     </main>
     <script src="./js/users.js"></script>
-    <script src="./js/checklogin.js"></script>
+    <script src="./js/checkLogin.js"></script>
     <script src="./js/logout.js"></script>
   </body>
 </html>
