--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./css/common.css" rel="stylesheet" type="text/css" />
-    <title>Order</title>
+    <title>Kafene | Products</title>
   </head>
   <body>
     <header>
