optimized login logout functionality

--- a/products.html
+++ b/products.html
@@ -80,7 +80,7 @@
       </section>
     </main>
     <script src="./js/products.js"></script>
-    <script src="./js/checklogin.js"></script>
+    <script src="./js/checkLogin.js"></script>
     <script src="./js/logout.js"></script>
   </body>
 </html>
